<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">有只梨</string>
	<string name="title_section1">{fa-globe}|Discovery</string>
	<string name="title_section2">{fa-shopping-cart}|Buy &amp; Sell</string>
	<string name="title_section3">{fa-book}|E-INK</string>
	<string name="nav_alert">{fa-bell}|消息</string>
	<string name="nav_my_posts">{fa-bookmark}|我的主题</string>
	<string name="nav_search">{fa-search}|搜索</string>
	<string name="nav_setting">{fa-gear}|设置</string>
	<string name="nav_logout">{fa-sign-out}|登出</string>
	<string name="nav_login">{fa-sign-in}|登入</string>
	<string name="nav_about">{fa-info}|关于</string>



	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_example">Example action</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_reply">ReplyActivity</string>
	<string name="hello_world">Hello world!</string>
	<string name="title_activity_my_posts">我的主题</string>
	<string name="title_activity_search">搜索</string>
	<string name="title_activity_user">UserActivity</string>
	<string name="title_activity_threads">ThreadsActivity</string>
	<string name="title_activity_image">ImageActivity</string>

	<string name="login_hipda">登录Hi!PDA</string>
	<string name="login">登录</string>
	<string name="cancel">取消</string>
	<string name="login_succeed">登录成功</string>

	<string name="update_available">新的版本</string>
	<string name="download">下载</string>

	<string name="blocked">{fa-eye-slash} 被屏蔽了</string>
	<string name="ok">确定</string>
	<string name="check_update">检查更新</string>
	<string name="delete">删除</string>

    <string name="crash_report">uzlee遇到了错误\n正在准备一封报告邮件</string>

    <item type="id" name="img_url" />
    <item type="id" name="img_has_bitmap" />
    <item type="id" name="img_width_height" />
    <item type="id" name="img_progress" />

	<string name="all_types">所有类别</string>
	<string name="error_login_required">还没有登录</string>

	<string name="red">茜素红</string>
	<string name="carrot">胡萝卜</string>
	<string name="orange">橘</string>
	<string name="green">绿海</string>
	<string name="blueGrey">瓦青</string>
	<string name="blue">湖蓝</string>
	<string name="purple">紫</string>
	<string name="dark">灰黑</string>
	<string name="night">黑夜</string>
</resources>
