<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/menu_dialog_width"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.rey.material.widget.Button
            android:id="@+id/red"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/redPrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/red"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.rey.material.widget.Button
            android:id="@+id/carrot"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/carrotPrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/carrot"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.rey.material.widget.Button
            android:id="@+id/orange"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orangePrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/orange"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.rey.material.widget.Button
            android:id="@+id/green"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenPrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/green"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.rey.material.widget.Button
            android:id="@+id/blueGrey"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueGreyPrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/blueGrey"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.rey.material.widget.Button
            android:id="@+id/blue"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bluePrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/blue"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.rey.material.widget.Button
            android:id="@+id/purple"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purplePrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/purple"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.rey.material.widget.Button
            android:id="@+id/dark"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/dark"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.rey.material.widget.Button
            android:id="@+id/night"
            style="@style/Material.Drawable.Ripple.Touch.MatchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nightPrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="6dp"
            android:text="@string/night"
            android:textColor="@color/nightTextPrimary"
            android:textSize="20dp" />

    </LinearLayout>
</ScrollView>